--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/media.css">
     <title>portfolio</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo"></div>
-            <nav class="header__nav">
-                <ul class="nav__item">
-                    <li class="list__item">Home</li>
-                    <li class="list__item">Works</li>
-                    <li class="list__item">Services</li>
-                    <li class="list__item">About</li>
-                    <li class="list__item">Contact</li>
-                </ul>
-            </nav>
+            <div class="flex__sb__fe">
+                <div class="logo"><a class="logo__title" href="#!">Kelvin</a></div>
+                <nav class="header__nav">
+                    <ul class="nav__item">
+                        <li class="list__item"><a href="#">Home</a></li>
+                        <li class="list__item"><a href="#">Works</a></li>
+                        <li class="list__item"><a href="#">Services</a></li>
+                        <li class="list__item"><a href="#">About</a></li>
+                        <li class="list__item"><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__content">
+                <h1 class="header__title">Kelvin Kramer <br> Designer & Developer</h1>
+                <p class="header__desc">I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure here.</p>
+            </div>
         </div>
     </header>
 
