--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="logo"><a class="logo__title" href="#!">Kelvin</a></div>
                 <nav class="header__nav">
                     <ul class="nav__item">
-                        <li class="list__item"><a href="#">Home</a></li>
+                        <li class="list__item"><a class="active" href="#">Home</a></li>
                         <li class="list__item"><a href="#">Works</a></li>
                         <li class="list__item"><a href="#">Services</a></li>
                         <li class="list__item"><a href="#">About</a></li>
@@ -23,23 +23,46 @@
                     </ul>
                 </nav>
             </div>
-            <div class="header__content">
-                <h1 class="header__title">Kelvin Kramer <br> Designer & Developer</h1>
-                <p class="header__desc">I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure here.</p>
-            </div>
+
         </div>
     </header>
 
+    <main>
 
+        <!-- advantage -->
+        <section class="advantage ">
+            <div class="container">
+                <div class="advantage__content">
+                    <h1 class="advantage__title">Kelvin Kramer <br> Designer & Developer</h1>
+                    <p class="advantage__desc">I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure here.</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- skills -->
+        <section class="skills">
+            <div class="container card__container">
+                <div class="skills__card">
+                    <img src="./images/startup/graphic.svg" alt="graphic" class="skills__card-img"></img>
+                    <h2 class="skills__card-title">UI/UX Design</h2>
+                    <p class="skills__card-desk">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                </div>
+                <div class="skills__card">
+                    <img src="./images/startup/startup.svg" alt="startup" class="skills__card-img"></img>
+                    <h2 class="skills__card-title">Development</h2>
+                    <p class="skills__card-desk">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                </div>
+                <div class="skills__card">
+                    <img src="./images/startup/browser.svg" alt="browser" class="skills__card-img"></img>
+                    <h2 class="skills__card-title">software testing</h2>
+                    <p class="skills__card-desk">Our design is translated into comprehensive digital environments built on latest development standards.</p>
+                </div>
+            </div>
+        </section>
 
+        
 
-
-
-
-
-
-    <main></main>
+    </main>
     <footer></footer>
 
     <script src="./js/main.js"></script>
