--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                     You are welcome!</p>
                 <button type="button">Send message</button>
                 <div class="socials">
-                    <img src="./images/socials/LinkedIn.svg" alt="Linkedin link">
-                    <img src="./images/socials/Instargam.svg" alt="Instargam link">
-                    <img src="./images/socials/Behance.svg" alt="Behance link">
-                    <img src="./images/socials/Dribble.svg" alt="Dribble link">
+                    <a href="#!"><img src="./images/socials/LinkedIn.svg" alt="Linkedin link"></a>
+                    <a href="#!"><img src="./images/socials/Instargam.svg" alt="Instargam link"></a>
+                    <a href="#!"><img src="./images/socials/Behance.svg" alt="Behance link"></a>
+                    <a href="#!"><img src="./images/socials/Dribble.svg" alt="Dribble link"></a>
                 </div>
-                <p>Like me on <br>
+                <p class="social__desc">Like me on <br>
                     LinkedIn, Instagram, Behance, Dribble
                 </p>
             </div>
