--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <title>portfolio</title>
@@ -40,12 +41,12 @@
         <section class="advantage ">
             <div class="container">
                 <div class="advantage__content">
-                    <div class="advantage__content-specification">
+                    <div class="advantage__content-specification" data-aos="zoom-out">
                         <h1 class="advantage__title">Kelvin Kramer <br> Designer & Developer</h1>
                         <p class="advantage__desc">I’m a portrait, fashion and lifestyle photographer living In New York
                             City. During my thirteen year tenure here.</p>
                     </div>
-                    <div class="advantage__portrait">
+                    <div class="advantage__portrait" data-aos="zoom-out">
                         <img src="./images/hero/hero.png" alt="photo">
                     </div>
                 </div>
@@ -55,19 +56,19 @@
         <!-- skills -->
         <section class="skills">
             <div class="container card__container">
-                <div class="skills__card">
+                <div class="skills__card" data-aos="fade-up" data-aos-duration="2000">
                     <img src="./images/startup/graphic.svg" alt="graphic" class="skills__card-img"></img>
                     <h2 class="skills__card-title">UI/UX Design</h2>
                     <p class="skills__card-desk">Our design is translated into comprehensive digital environments built
                         on latest development standards.</p>
                 </div>
-                <div class="skills__card">
+                <div class="skills__card" data-aos="fade-up" data-aos-duration="2000">
                     <img src="./images/startup/startup.svg" alt="startup" class="skills__card-img"></img>
                     <h2 class="skills__card-title">Development</h2>
                     <p class="skills__card-desk">Our design is translated into comprehensive digital environments built
                         on latest development standards.</p>
                 </div>
-                <div class="skills__card">
+                <div class="skills__card" data-aos="fade-up" data-aos-duration="2000">
                     <img src="./images/startup/browser.svg" alt="browser" class="skills__card-img"></img>
                     <h2 class="skills__card-title">software testing</h2>
                     <p class="skills__card-desk">Our design is translated into comprehensive digital environments built
@@ -79,27 +80,27 @@
         <!-- portfolio -->
         <section class="portfolio">
             <div class="container">
-                <h3 class="portfolio__title" id="works">Portfolio</h3>
+                <h3 class="portfolio__title" id="works" data-aos="fade-up">Portfolio</h3>
                 <div class="portfolio__example">
-                    <div class="portfolio__example-box">
+                    <div class="portfolio__example-box" data-aos="fade-up">
                         <img src="./images/portfol/collection.jpg" alt="">
-                        <a class="portfolio__link" href="#!">
+                        <a class="portfolio__link" href="#!" data-aos="fade-up" data-aos-duration="3000">
                             <p>Online fashion store - Homepage</p>
                         </a>
                     </div>
 
 
-                    <div class="portfolio__example-box">
+                    <div class="portfolio__example-box" data-aos="fade-up">
                         <img src="./images/portfol/reebok.jpg" alt="">
-                        <a class="portfolio__link" href="#!">
+                        <a class="portfolio__link" href="#!"data-aos="fade-up" data-aos-duration="3000">
                             <p>Reebok Store - Concept</p>
                         </a>
                     </div>
 
 
-                    <div class="portfolio__example-box">
+                    <div class="portfolio__example-box" data-aos="fade-up">
                         <img src="./images/portfol/braun.jpg" alt="">
-                        <a class="portfolio__link" href="#!">
+                        <a class="portfolio__link" href="#!" data-aos="fade-up" data-aos-duration="3000">
                             <p>Braun Landing Page - Concept</p>
                         </a>
                     </div>
@@ -114,7 +115,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer__container">
+            <div class="footer__container" data-aos="fade-up" data-aos-duration="2000">
                 <h3 class="footer__title" id="contacts">Contacts</h3>
                 <p class="footer__desc">Want to know more or just chat?<br>
                     You are welcome!</p>
@@ -132,16 +133,10 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-    <script>
-        $(document).ready(function () {
-            $(".burger").on("click", function (event) {
-                $(".burger, .nav__item").toggleClass("active");
-                $("body").toggleClass("lock");
-            })
-        });
-    </script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
