add hover min css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./css/hover-min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.js"
         integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <title>portfolio</title>
@@ -20,11 +22,11 @@
                 <div class="logo"><a class="logo__title" href="#!">Kelvin</a></div>
                 <nav class="header__nav">
                     <ul class="nav__item">
-                        <li class="list__item"><a href="#">Home</a></li>
-                        <li class="list__item"><a href="#works">Works</a></li>
-                        <li class="list__item"><a href="#">Services</a></li>
-                        <li class="list__item"><a href="#">About</a></li>
-                        <li class="list__item"><a href="#contacts">Contact</a></li>
+                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">Home</a></li>
+                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#works">Works</a></li>
+                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">Services</a></li>
+                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">About</a></li>
+                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#contacts">Contact</a></li>
                     </ul>
                     <div class="burger">
                         <span></span>
@@ -42,7 +44,7 @@
             <div class="container">
                 <div class="advantage__content">
                     <div class="advantage__content-specification" data-aos="zoom-out">
-                        <h1 class="advantage__title">Kelvin Kramer <br> Designer & Developer</h1>
+                        <h1 title="its me" class="advantage__title">Kelvin Kramer <br> Designer & Developer</h1>
                         <p class="advantage__desc">I’m a portrait, fashion and lifestyle photographer living In New York
                             City. During my thirteen year tenure here.</p>
                     </div>
