--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <div class="logo"><a class="logo__title" href="#!">Kelvin</a></div>
                 <nav class="header__nav">
                     <ul class="nav__item">
-                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">Home</a></li>
-                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#works">Works</a></li>
-                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">Services</a></li>
-                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#">About</a></li>
-                        <li class="list__item hvr-float-shadow"><a class="list__item-link animate__animated animate__fadeIn animate__faster" href="#contacts">Contact</a></li>
+                        <li class="list__item"><a class="list__item-link hvr-float-shadow animate__animated animate__fadeIn animate__faster" href="#">Home</a></li>
+                        <li class="list__item"><a class="list__item-link hvr-float-shadow animate__animated animate__fadeIn animate__faster" href="#works">Works</a></li>
+                        <li class="list__item"><a class="list__item-link hvr-float-shadow animate__animated animate__fadeIn animate__faster" href="#">Services</a></li>
+                        <li class="list__item"><a class="list__item-link hvr-float-shadow animate__animated animate__fadeIn animate__faster" href="#">About</a></li>
+                        <li class="list__item"><a class="list__item-link hvr-float-shadow animate__animated animate__fadeIn animate__faster" href="#contacts">Contact</a></li>
                     </ul>
                     <div class="burger">
                         <span></span>
